# Analise-de-Dados-Dataset-Dados_Vendas.csv

./: dados_vendas.csv  main.py  pyproject.toml
